--- a/index.html
+++ b/index.html
@@ -44,24 +44,24 @@
                     </div>
                     
                     <div class="border-2 rounded-lg p-6">
-                        <img class="mx-auto" src="images/triangle.png" alt="">
-                        <h2 class="text-2xl text-center font-medium mt-4">Traiangle</h2>
-                        <p class="text-sm text-center">Area(A) = 0.5 x b x h</p>
+                        <img class="mx-auto" src="images/rectangle.png" alt="">
+                        <h2 class="text-2xl text-center font-medium mt-4">Rectangle</h2>
+                        <p class="text-sm text-center">Area(A) = w x I</p>
                         <!-- input  -->
                         <div class="text-center">
                             <input  id="" style="width: 100px;" class="border-2 mt-6  focus:outline-none focus:ring focus:ring-violet-500 
-                            px-2 py-1 rounded-lg" placeholder="b" type="text" name=""> <span> cm</span>
+                            px-2 py-1 rounded-lg" placeholder="w" type="text" name=""> <span> cm</span>
                             <input  id="" style="width: 100px;" class="ml-3 border-2 mx-auto focus:outline-none focus:ring focus:ring-violet-500 
-                            px-2 py-1 rounded-lg" placeholder="h" type="text" name=""> <span> cm</span>
+                            px-2 py-1 rounded-lg" placeholder="I" type="text" name=""> <span> cm</span>
                         </div>
                             <br>
                         <button class="mt-6 mb-3 text-center w-full bg-blue-600/75 text-white font-bold px-6 py-2 rounded-lg            hover:bg-violet-600 active:bg-violet-700 ">Calculate</button>
                     </div>
 
                      <div class="border-2 rounded-lg p-6">
-                        <img class="mx-auto" src="images/triangle.png" alt="">
-                        <h2 class="text-2xl text-center font-medium mt-4">Traiangle</h2>
-                        <p class="text-sm text-center">Area(A) = 0.5 x b x h</p>
+                        <img class="mx-auto" src="images/parallelogram.png" alt="">
+                        <h2 class="text-2xl text-center font-medium mt-4">Parallelogram</h2>
+                        <p class="text-sm text-center">Area(A) = b x h</p>
                         <!-- input  -->
                         <div class="text-center">
                             <input  id="" style="width: 100px;" class="border-2 mt-6  focus:outline-none focus:ring focus:ring-violet-500 
@@ -73,43 +73,43 @@
                         <button class="mt-6 mb-3 text-center w-full bg-blue-600/75 text-white font-bold px-6 py-2 rounded-lg            hover:bg-violet-600 active:bg-violet-700 ">Calculate</button>
                     </div>
                     <div class="border-2 rounded-lg p-6">
-                        <img class="mx-auto" src="images/triangle.png" alt="">
-                        <h2 class="text-2xl text-center font-medium mt-4">Traiangle</h2>
-                        <p class="text-sm text-center">Area(A) = 0.5 x b x h</p>
+                        <img class="mx-auto" src="images/rhombus.png" alt="">
+                        <h2 class="text-2xl text-center font-medium mt-4">Rhombus</h2>
+                        <p class="text-sm text-center">Area(A) = 0.5 x d<sub>1</sub> x d<sub>2</sub> </p>
                         <!-- input  -->
                         <div class="text-center">
                             <input  id="" style="width: 100px;" class="border-2 mt-6  focus:outline-none focus:ring focus:ring-violet-500 
-                            px-2 py-1 rounded-lg" placeholder="b" type="text" name=""> <span> cm</span>
+                            px-2 py-1 rounded-lg" placeholder="d1" type="text" name=""> <span> cm</span>
                             <input  id="" style="width: 100px;" class="ml-3 border-2 mx-auto focus:outline-none focus:ring focus:ring-violet-500 
-                            px-2 py-1 rounded-lg" placeholder="h" type="text" name=""> <span> cm</span>
+                            px-2 py-1 rounded-lg" placeholder="d2" type="text" name=""> <span> cm</span>
                         </div>
                             <br>
                         <button class="mt-6 mb-3 text-center w-full bg-blue-600/75 text-white font-bold px-6 py-2 rounded-lg            hover:bg-violet-600 active:bg-violet-700 ">Calculate</button>
                     </div>
                     <div class="border-2 rounded-lg p-6">
-                        <img class="mx-auto" src="images/triangle.png" alt="">
+                        <img class="mx-auto" src="images/pentagon.png" alt="">
                         <h2 class="text-2xl text-center font-medium mt-4">Traiangle</h2>
-                        <p class="text-sm text-center">Area(A) = 0.5 x b x h</p>
+                        <p class="text-sm text-center">Area(A) = 0.5 x p x b</p>
                         <!-- input  -->
                         <div class="text-center">
                             <input  id="" style="width: 100px;" class="border-2 mt-6  focus:outline-none focus:ring focus:ring-violet-500 
-                            px-2 py-1 rounded-lg" placeholder="b" type="text" name=""> <span> cm</span>
+                            px-2 py-1 rounded-lg" placeholder="p" type="text" name=""> <span> cm</span>
                             <input  id="" style="width: 100px;" class="ml-3 border-2 mx-auto focus:outline-none focus:ring focus:ring-violet-500 
-                            px-2 py-1 rounded-lg" placeholder="h" type="text" name=""> <span> cm</span>
+                            px-2 py-1 rounded-lg" placeholder="b" type="text" name=""> <span> cm</span>
                         </div>
                             <br>
                         <button class="mt-6 mb-3 text-center w-full bg-blue-600/75 text-white font-bold px-6 py-2 rounded-lg            hover:bg-violet-600 active:bg-violet-700 ">Calculate</button>
                     </div>
                     <div class="border-2 rounded-lg p-6">
-                        <img class="mx-auto" src="images/triangle.png" alt="">
+                        <img class="mx-auto" src="images/ellipse.png" alt="">
                         <h2 class="text-2xl text-center font-medium mt-4">Traiangle</h2>
-                        <p class="text-sm text-center">Area(A) = 0.5 x b x h</p>
+                        <p class="text-sm text-center">Area(A) = &#960; a x b</p>
                         <!-- input  -->
                         <div class="text-center">
                             <input  id="" style="width: 100px;" class="border-2 mt-6  focus:outline-none focus:ring focus:ring-violet-500 
-                            px-2 py-1 rounded-lg" placeholder="b" type="text" name=""> <span> cm</span>
+                            px-2 py-1 rounded-lg" placeholder="a" type="text" name=""> <span> cm</span>
                             <input  id="" style="width: 100px;" class="ml-3 border-2 mx-auto focus:outline-none focus:ring focus:ring-violet-500 
-                            px-2 py-1 rounded-lg" placeholder="h" type="text" name=""> <span> cm</span>
+                            px-2 py-1 rounded-lg" placeholder="b" type="text" name=""> <span> cm</span>
                         </div>
                             <br>
                         <button class="mt-6 mb-3 text-center w-full bg-blue-600/75 text-white font-bold px-6 py-2 rounded-lg            hover:bg-violet-600 active:bg-violet-700 ">Calculate</button>
@@ -117,8 +117,9 @@
                 </div>
             </div>
             <!-- area part  -->
-            <div>
-                <h2>Area Calculation</h2>
+            <div class="container p-6 ">
+                <h2 class="text-center text-2xl font-bold text-orange-500 underline underline-offset-8">Area Calculation</h2>
+
             </div>
         </div>
     </section>
