--- a/index.html
+++ b/index.html
@@ -30,17 +30,17 @@
                 <div class="grid grid-cols-3 gap-4">
                     <div class="border-2 rounded-lg p-6">
                         <img class="mx-auto" src="images/triangle.png" alt="">
-                        <h2 class="text-2xl text-center font-medium mt-4">Traiangle</h2>
+                        <h2 id="triangle-name" class="text-2xl text-center font-medium mt-4">Triangle</h2>
                         <p class="text-sm text-center">Area(A) = 0.5 x b x h</p>
                         <!-- input  -->
                         <div class="text-center">
-                            <input  id="" style="width: 100px;" class="border-2 mt-6  focus:outline-none focus:ring focus:ring-violet-500 
+                            <input  id="triangle-input-b" style="width: 100px;" class="border-2 mt-6  focus:outline-none focus:ring focus:ring-violet-500 
                             px-2 py-1 rounded-lg" placeholder="b" type="text" name=""> <span> cm</span>
-                            <input  id="" style="width: 100px;" class="ml-3 border-2 mx-auto focus:outline-none focus:ring focus:ring-violet-500 
+                            <input  id="triangle-input-h" style="width: 100px;" class="ml-3 border-2 mx-auto focus:outline-none focus:ring focus:ring-violet-500 
                             px-2 py-1 rounded-lg" placeholder="h" type="text" name=""> <span> cm</span>
                         </div>
                             <br>
-                        <button class="mt-6 mb-3 text-center w-full bg-blue-600/75 text-white font-bold px-6 py-2 rounded-lg            hover:bg-violet-600 active:bg-violet-700 ">Calculate</button>
+                        <button id="triangle-btn" class="mt-6 mb-3 text-center w-full bg-blue-600/75 text-white font-bold px-6 py-2 rounded-lg            hover:bg-violet-600 active:bg-violet-700 ">Calculate</button>
                     </div>
                     
                     <div class="border-2 rounded-lg p-6">
@@ -119,9 +119,17 @@
             <!-- area part  -->
             <div class="container p-6 ">
                 <h2 class="text-center text-2xl font-bold text-orange-500 underline underline-offset-8">Area Calculation</h2>
-
+                <ol id="calculation-list" class="list-decimal mt-6">
+                    
+                </ol>  
             </div>
         </div>
     </section>
+
+    <!-- js link  -->
+    <script src="js/utilities.js"></script>
+    <script src="js/cards.js"></script>
+    <!-- js alert package  -->
+    <script src="https://unpkg.com/js-alert/dist/jsalert.min.js"></script>
 </body>
 </html>
