--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <p class="text-2xl">Geometry Genius</p>
             </div>
             <div class="flex items-center">           
-                <button class="bg-blue-600/75 text-white font-bold px-6 py-2 rounded-lg             hover:bg-violet-600 active:bg-violet-700 ">Blog</button>
+                <button id="redirect" class="bg-blue-600/75 text-white font-bold px-6 py-2 rounded-lg             hover:bg-violet-600 active:bg-violet-700 ">Blog</button>
             </div>
         </div>
     </section>
@@ -28,7 +28,7 @@
             <!-- cards part  -->
             <div class="col-span-3">
                 <div class="grid grid-cols-3 gap-4">
-                    <div class="border-2 rounded-lg p-6">
+                    <div class="randomColor border-2 rounded-lg p-6">
                         <img class="mx-auto" src="images/triangle.png" alt="">
                         <h2 id="triangle-name" class="text-2xl text-center font-medium mt-4">Triangle</h2>
                         <p class="text-sm text-center">Area(A) = 0.5 x b x h</p>
@@ -43,7 +43,7 @@
                         <button id="triangle-btn" class="mt-6 mb-3 text-center w-full bg-blue-600/75 text-white font-bold px-6 py-2 rounded-lg            hover:bg-violet-600 active:bg-violet-700 ">Calculate</button>
                     </div>
                     
-                    <div class="border-2 rounded-lg p-6">
+                    <div class="randomColor border-2 rounded-lg p-6">
                         <img class="mx-auto" src="images/rectangle.png" alt="">
                         <h2 id="rectangle-name" class="text-2xl text-center font-medium mt-4">Rectangle</h2>
                         <p class="text-sm text-center">Area(A) = w x I</p>
@@ -58,7 +58,7 @@
                         <button id="rectangle-btn" class="mt-6 mb-3 text-center w-full bg-blue-600/75 text-white font-bold px-6 py-2 rounded-lg            hover:bg-violet-600 active:bg-violet-700 ">Calculate</button>
                     </div>
 
-                     <div class="border-2 rounded-lg p-6">
+                     <div class="randomColor border-2 rounded-lg p-6">
                         <img class="mx-auto" src="images/parallelogram.png" alt="">
                         <h2 id="para-name" class="text-2xl text-center font-medium mt-4">Parallelogram</h2>
                         <p class="text-sm text-center">Area(A) = b x h</p>
@@ -72,7 +72,7 @@
                             <br>
                         <button id="parallelogram-btn" class="mt-6 mb-3 text-center w-full bg-blue-600/75 text-white font-bold px-6 py-2 rounded-lg            hover:bg-violet-600 active:bg-violet-700 ">Calculate</button>
                     </div>
-                    <div class="border-2 rounded-lg p-6">
+                    <div class="randomColor border-2 rounded-lg p-6">
                         <img class="mx-auto" src="images/rhombus.png" alt="">
                         <h2 id="rhombus-name" class="text-2xl text-center font-medium mt-4">Rhombus</h2>
                         <p class="text-sm text-center">Area(A) = 0.5 x d<sub>1</sub> x d<sub>2</sub> </p>
@@ -86,7 +86,7 @@
                             <br>
                         <button id="rhombus-btn" class="mt-6 mb-3 text-center w-full bg-blue-600/75 text-white font-bold px-6 py-2 rounded-lg hover:bg-violet-600 active:bg-violet-700 ">Calculate</button>
                     </div>
-                    <div class="border-2 rounded-lg p-6">
+                    <div class="randomColor border-2 rounded-lg p-6">
                         <img class="mx-auto" src="images/pentagon.png" alt="">
                         <h2 id="pentagon-name" class="text-2xl text-center font-medium mt-4">Pentagon</h2>
                         <p class="text-sm text-center">Area(A) = 0.5 x p x b</p>
@@ -100,7 +100,7 @@
                             <br>
                         <button id="pentagon-btn" class="mt-6 mb-3 text-center w-full bg-blue-600/75 text-white font-bold px-6 py-2 rounded-lg            hover:bg-violet-600 active:bg-violet-700 ">Calculate</button>
                     </div>
-                    <div class="border-2 rounded-lg p-6">
+                    <div class="randomColor border-2 rounded-lg p-6">
                         <img class="mx-auto" src="images/ellipse.png" alt="">
                         <h2 id="ellipse-name" class="text-2xl text-center font-medium mt-4">Ellipse</h2>
                         <p class="text-sm text-center">Area(A) = &#960; a x b</p>
