--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
 </head>
 <body>
     <!-- heading section  -->
-    <section class="m-8">
+    <!-- responsive  -->
+    <section class="header m-8 "> 
         <div class="flex justify-between bg-cyan-100 m-5 p-5 rounded-lg">
-            <div>
+            <!-- class="hidden md:block -->
+            <div class="logo">
                 <h1 class="text-4xl font-extrabold">Interactive</h1>
-                <p class="text-2xl">Geometry Genius</p>
+                <p class=" md:text-2xl">Geometry Genius</p>
             </div>
-            <div class="flex items-center">           
+            <div class="blog flex items-center">           
                 <button id="redirect" class="bg-blue-600/75 text-white font-bold px-6 py-2 rounded-lg             hover:bg-violet-600 active:bg-violet-700 ">Blog</button>
             </div>
         </div>
@@ -24,10 +26,10 @@
 
     <!-- geometry section  -->
     <section class="m-2 p-10">
-        <div class="grid grid-cols-4 gap-4">
+        <div class="grid grid-cols-1 gap-2 md:grid-cols-4 md:gap-4">
             <!-- cards part  -->
             <div class="col-span-3">
-                <div class="grid grid-cols-3 gap-4">
+                <div class=" grid grid-cols-1 md:grid-cols-3 gap-4">
                     <div class="randomColor border-2 rounded-lg p-6">
                         <img class="mx-auto" src="images/triangle.png" alt="">
                         <h2 id="triangle-name" class="text-2xl text-center font-medium mt-4">Triangle</h2>
@@ -118,8 +120,8 @@
             </div>
             <!-- area part  -->
             
-            <div class="container p-6">
-                <h2 class="text-center text-2xl font-bold text-orange-500 underline underline-offset-8">Area Calculation</h2>
+            <div class="container p-3">
+                <h2 class="text-center mb-12 md:mb-2 text-xl md:text-2xl font-bold text-orange-500 underline underline-offset-8">Area Calculation</h2>
                 <ol id="calculation-list" class="list-decimal mt-4 mb-3 ">
                     <!-- flex justify-between  -->
                     <button  class="convertM mt-4 mb-3 text-center bg-blue-600/75 text-white font-bold px-1 py-2 rounded-lg hover:bg-violet-600 
