--- a/index.html
+++ b/index.html
@@ -121,13 +121,17 @@
             <!-- area part  -->
             
             <div class="container p-3">
-                <h2 class="text-center mb-12 md:mb-2 text-xl md:text-2xl font-bold text-orange-500 underline underline-offset-8">Area Calculation</h2>
-                <ol id="calculation-list" class="list-decimal mt-4 mb-3 ">
-                    <!-- flex justify-between  -->
-                    <button  class="convertM mt-4 mb-3 text-center bg-blue-600/75 text-white font-bold px-1 py-2 rounded-lg hover:bg-violet-600 
-                    active:bg-violet-700 ">Convert to m<sup>2</sup></button>
-
-                </ol>  
+                <h2 class="text-center mb-12 md:mb-2 text-xl md:text-2xl font-bold text-orange-500 
+                underline underline-offset-8">Area Calculation</h2>
+                <div>
+                    <ol id="calculation-list" class="list-decimal ">
+                        <!-- flex justify-between  -->
+                        <!-- <button id="convertMetre" class="convertM text-center bg-blue-600/75 text-white font-bold px-1 py-2 
+                        rounded-lg hover:bg-violet-600 
+                        active:bg-violet-700 ">Convert to m<sup>2</sup></button> -->
+    
+                    </ol>  
+                </div>
             </div>
         </div>
     </section>
