--- a/questions.html
+++ b/questions.html
@@ -10,7 +10,8 @@
     <h1 class="text-4xl text-center mt-3 font-medium">Welcome to 
         <span class="text-amber-600">Q&A page</span></h1>
     
-    <a id="link" href="https://www.gmail.com" target="_blank">gmail</a>
+    <label for="What is">What is DOM</label>
+    <input type="text" name="" id="">
 
 </body>
 </html>
